force-app/main/default/objects/Branch__c/fields/Branch_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager_Name__c</fullName>
    <label>Branch Manager Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>