force-app/main/default/objects/Branch__c/fields/Total_Active_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Contracts__c</fullName>
    <label>Total Active Contracts</label>
    <summaryFilterItems>
        <field>Management_Contract__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Management_Contract__c.Branch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>